fix number arrows overflowing shadow settings

--- a/resources/stylesheet.css
+++ b/resources/stylesheet.css
@@ -582,6 +582,7 @@ input[type="number"] { width:60px; }
   overflow-y:auto;
   overflow-x:hidden;
   white-space:nowrap;
+  position:relative;
   padding-right:15px;
   margin-top:6px;
 }
